<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Admin2aFragment">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="400dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023">

        <TextView
            android:id="@+id/textView"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:width="400dp"
            android:background="@color/grey"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Adminview"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView1team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AEK"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/team1list"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.04" />

    <ListView
        android:id="@+id/team1list"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/spinnerborder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textView2Team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ARIS"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/team2list"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1team"
        app:layout_constraintVertical_bias="0.141" />

    <ListView
        android:id="@+id/team2list"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:background="@drawable/spinnerborder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team1list"
        app:layout_constraintVertical_bias="0.091" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinnerborder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team2list"
        app:layout_constraintVertical_bias="0.175">

        <RadioGroup
            android:id="@+id/Pointsgroup"
            android:layout_width="124dp"
            android:layout_height="130dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">

            <RadioButton
                android:id="@+id/Point1ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/point1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/Point2ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/point2"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/Point3ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/point3"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </RadioGroup>

        <Button
            android:id="@+id/INbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/btnborder"
            android:text="@string/IN"
            android:textSize="20sp" />

        <Button
            android:id="@+id/OUTbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/btnborder"
            android:text="@string/OUT"
            android:textSize="20sp" />

    </FrameLayout>

    <Button
        android:id="@+id/foulbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btnborder"
        android:text="@string/FOUL"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stealbtn"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        app:layout_constraintVertical_bias="0.234" />

    <Button
        android:id="@+id/stealbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btnborder"
        android:text="@string/STEAL"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        app:layout_constraintVertical_bias="0.234" />

    <Button
        android:id="@+id/turnoverbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btnborder"
        android:text="@string/TURNOVER"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toEndOf="@+id/stealbtn"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        app:layout_constraintVertical_bias="0.234" />

</androidx.constraintlayout.widget.ConstraintLayout>